<?xml version="1.0"?>
<package format="3">
  <name>fci_navigation_events_broadcaster</name>
  <version>0.0.1</version>
  <description>Broadcast Franka Desk navigation button websocket events to ROS 2 topics.</description>
  <maintainer email="smihael@gmail.com">Mihael Simonic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-websocket</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
